test/src/e2e_vm_tests/test_programs/should_fail/recover_letx_no_expr/src/main.sw
script;

fn main() {
    let
    let a
    let b =
    let c = 1
    let d = 1;
}
